# PTA_Project_WiSe_2017_18

./: README.md
Performance_TestScript_Generic/: 2Sample_tTestData.xlsx  ReadMe.md  package.json  performance_benchmarking_2.js  performance_benchmarking_ttest.js
Report/: Refactoring_Functional2Iterative.xlsx  Refactoring_Functional2Iterative_Consolidated.xlsx  Refactoring_Functional2Iterative_part2.xlsx
Report/Test_results/minimist/ForEach_test/: performance.txt
Report/Test_results/nanomist/: performance.txt
Report/Test_results/rimraf/ForEach_Test/: performance.txt
Report/Test_results/semver/ForEach_TestCases/: Performance_Measurements.txt
Report/Test_results/semver/Map_TestCases/: performance.txt
SimpleJacobiMultiGPU_Topology_Optimized_MultiThread/: CMakeLists.txt  multiGPUConfig.xml  multiGPU_topology_optimize.cu  multiGPU_topology_optimize.cuh  testMultiGPU_Jacobi.cu  testMultiGPU_Jacobi.cuh  testMultiGPU_Jacobi2D_Decom.cu  testMultiGPU_Jacobi2D_Decom.cu_Seperate_kernels  testMultiGPU_Jacobi2D_Decom.cu_Single_Thread  testMultiGPU_Jacobi2D_Decom.cuh  timer.h
Simple_AST_parsing/: analyze.js  package-lock.json  testJSFile.js
ToolChain/src/: ReadMe.md
ToolChain/src/filter/: analyze.js  analyze_Filter_Functions.js  analyze_Filter_Root.js  analyze_filter_FunctionExpression.js  filter_frame.js
ToolChain/src/filter/Test/: rimraf.js
ToolChain/src/forEach/: AST_Sample.json  analyze.js  analyze_ForEach_FunctionExpression.js  analyze_ForEach_Functions.js  analyze_ForEach_Root.js  forEach_frame.js
ToolChain/src/map/: analyze.js  analyze_map_Functions.js  analyze_map_FunctionsExpression.js  analyze_map_Root.js  map_frame.js  map_frame_2.js
ToolChain/src/reduce/: analyze.js  analyze_reduce_Functions.js  analyze_reduce_FunctionsExpression.js  analyze_reduce_Root.js  package-lock.json  reduce_frame.js  reduce_frame_2.js
(+110 files in other folders)
